--- a/NuGet.config
+++ b/NuGet.config
@@ -7,6 +7,7 @@
   </fallbackPackageFolders>
   <packageSources>
     <clear />
+       <add key="foo" value="/Users/adeel/projects/llvm-project/artifacts/packages/Release/Shipping" />
     <!--
       'src/test/PrepareTestAssets/PrepareTestAssets.proj' generates a NuGet.config file using this
       one as a template. The following line is a marker to insert the test restore sources.
