--- a/src/coreclr/tools/aot/crossgen2/crossgen2.props
+++ b/src/coreclr/tools/aot/crossgen2/crossgen2.props
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <Compile Include="..\..\Common\CommandLineHelpers.cs" />
+    <Compile Include="..\..\Common\InstructionSetHelpers.cs" />
   </ItemGroup>
 
   <PropertyGroup>
