Disable source link

--- a/src/tests/Common/Directory.Build.targets
+++ b/src/tests/Common/Directory.Build.targets
@@ -40,7 +40,7 @@
     <MSBuild Condition="'$(Crossgen2Supported)' == 'true'"
       Targets="Restore;Publish"
       BuildInParallel="true"
-      Properties="PublishDir=$(CORE_ROOT)\..\crossgen2"
+      Properties="PublishDir=$(CORE_ROOT)\..\crossgen2;DisableSourceLink=true"
       Projects="$(InstallerProjectRoot)pkg\sfx\Microsoft.NETCore.App\Microsoft.NETCore.App.Crossgen2.sfxproj" />
 
     <ItemGroup>
