--- a/src/mono/mono/mini/CMakeLists.txt
+++ b/src/mono/mono/mini/CMakeLists.txt
@@ -24,7 +24,10 @@ set(OS_LIBS "-framework CoreFoundation" "-lobjc" "-lc++")
 elseif(HOST_ANDROID)
 set(OS_LIBS m dl log)
 elseif(HOST_LINUX)
-set(OS_LIBS pthread m dl)
+set(OS_LIBS pthread m dl gcc_s)
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU") # gcc also requires libc_nonshared.a
+    set(OS_LIBS ${OS_LIBS} -l:libc_nonshared.a)
+  endif()
 elseif(HOST_WIN32)
 set(OS_LIBS bcrypt.lib Mswsock.lib ws2_32.lib psapi.lib version.lib advapi32.lib winmm.lib kernel32.lib)
 elseif(HOST_SOLARIS)
