--- a/src/mono/mono/profiler/CMakeLists.txt
+++ b/src/mono/mono/profiler/CMakeLists.txt
@@ -14,7 +14,7 @@ if(NOT DISABLE_LIBS)
     # Build the logging profiler only for certain platforms
     add_library(mono-profiler-log SHARED helper.c log.c log-args.c ${ZLIB_SOURCES})
     target_compile_definitions(mono-profiler-log PRIVATE -DMONO_DLL_EXPORT)
-    target_link_libraries(mono-profiler-log PRIVATE monosgen-shared monoapi eglib_objects)
+    target_link_libraries(mono-profiler-log PRIVATE monosgen-shared monoapi eglib_objects ${CMAKE_DL_LIBS})
     if(HOST_ANDROID)
       target_link_libraries(mono-profiler-log PRIVATE log)
     endif()
