--- a/src/mono/mono/eglib/CMakeLists.txt
+++ b/src/mono/mono/eglib/CMakeLists.txt
@@ -34,13 +34,7 @@ set(eglib_common_sources
     gfile.c
     gfile-posix.c
     gutf8.c
-    ${CLR_SRC_NATIVE_DIR}/minipal/utf8.cpp)
-
-if(HOST_WIN32)
-set_source_files_properties("${CLR_SRC_NATIVE_DIR}/minipal/utf8.cpp" PROPERTIES COMPILE_FLAGS "/wd4100 /wd4267 /wd4458 /wd4310")
-else()
-set_source_files_properties("${CLR_SRC_NATIVE_DIR}/minipal/utf8.cpp" PROPERTIES COMPILE_FLAGS "-std=c++11 -fno-rtti -fno-exceptions")
-endif()
+    ${CLR_SRC_NATIVE_DIR}/minipal/utf8.c)
 
 set(eglib_headers
   glib.h
