Fixes for Windows and cleanups

--- a/src/mono/mono/eglib/CMakeLists.txt
+++ b/src/mono/mono/eglib/CMakeLists.txt
@@ -36,6 +36,10 @@ set(eglib_common_sources
     gutf8.c
     ${CLR_SRC_NATIVE_DIR}/minipal/utf8.c)
 
+if(HOST_WIN32)
+set_source_files_properties("${CLR_SRC_NATIVE_DIR}/minipal/utf8.c" PROPERTIES COMPILE_FLAGS "/wd4100 /wd4267 /wd4458 /wd4310")
+endif()
+
 set(eglib_headers
   glib.h
   eglib-remap.h
