Add API documentation & simplify BIGENDIAN

--- a/src/mono/mono/eglib/CMakeLists.txt
+++ b/src/mono/mono/eglib/CMakeLists.txt
@@ -36,13 +36,17 @@ set(eglib_common_sources
     gutf8.c
     ${CLR_SRC_NATIVE_DIR}/minipal/utf8.c)
 
+if(NOT HOST_WIN32 AND IS_BIG_ENDIAN)
+  set_source_files_properties("${CLR_SRC_NATIVE_DIR}/minipal/utf8.c" PROPERTIES COMPILE_FLAGS "-DBIGENDIAN=1")
+endif()
+
 set(eglib_headers
   glib.h
   eglib-remap.h
   gmodule.h)
 
 if(HAVE_CLOCK_NANOSLEEP)
-list(APPEND eglib_common_sources gclock-nanosleep.c)
+  list(APPEND eglib_common_sources gclock-nanosleep.c)
 endif()
 
 set(eglib_sources "${eglib_platform_sources};${eglib_common_sources}")
